# hiob-data

./: ALLOWLIST_POLICY.md  README.md  allowlist_raw_writes.txt  ownership_manifest.yaml  pyproject.toml
hiob_data/: __init__.py  audit_writes.py  governor.py  ownership.py  ownership_ssot.py
tests/: test_audit_writes.py  test_d4_roles_foundation.py  test_generic_write.py  test_governor.py  test_ownership_ssot.py
