[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiob-data"
version = "0.1.0"
description = "HIOB polyrepo planet · hiob-data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["hiob_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
